fixed vertical spacing of navbar-header__welcome-page__text__primary when the screen is very wide

--- a/src/widgets/NavBarHeader/NavBarHeader.css
+++ b/src/widgets/NavBarHeader/NavBarHeader.css
@@ -73,7 +73,7 @@
 }
 
 .navbar-header__welcome-page__text__primary {
-  margin-top: calc(50% - 5.5rem);
+  margin-top: calc(50vh - 5.5rem);
   padding-right: 25%;
   font-size: 1.5rem;
   font-weight: 600;
